<resources>
    <string name="app_name">UpMoBank</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="submit">Submit</string>
    <string name="error_while_logging_in">Error while logging in</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="fetch_user">Fetch user</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="click_here_to_sign_in">Click here to Sign in</string>
    <string name="uaFragm">UA</string>
    <string name="usFragm">US</string>
    <string name="euFragm">EU</string>
    <string name="uaSymbol">₴</string>
    <string name="usSymbol">$</string>
    <string name="euSymbol">€</string>
    <string name="account_number">Account number:</string>
    <string name="_0_00">0.00</string>
    <string name="_0">0</string>
    <string name="exchange_rates">Exchange Rates:</string>
    <string name="send_money">Send money</string>
    <string name="blocked_functions">Blocked functions</string>
    <string name="setings">Setings</string>
    <string name="your_balance">Your balance</string>
    <string name="send">Send</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_card_or_phone">Enter card or phone</string>
    <string name="amount_of_money">Amount Of Money</string>
    <string name="accounts_code">Accounts code</string>
    <string name="full_name">Full name:</string>
    <string name="change_phone">Change phone:</string>
    <string name="hange_email">Сhange email:</string>
    <string name="change_password">Change password:</string>
    <string name="change">Change</string>
    <string name="support">Support</string>
    <string name="update_information">Update information</string>
    <string name="conversion">conversion</string>
</resources>